--- a/OSCTool.html
+++ b/OSCTool.html
@@ -3,8 +3,8 @@
 <head>
 	<title>OSCTool</title>
 </head>
-<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha/css/bootstrap.css">
-<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular.min.js"></script>
+<link rel="stylesheet" type="text/css" href="bootstrap.css">
+<script src="angular.min.js"></script>
 <script type="text/javascript" src='OSCTool.js'></script>
 
 <body>
